v0.9 [2016-]

    - update: "Announcer.wx.lua"  / by jrock
        - tab 1:
        - tab 2:
        - tab 3:
            - added check to blacklist/whitelist to show error if new entry already exists on table
        - tab 4:
            - replaced rules_listbox elements with rules_listview
            - added check to enable/disable delete + clone button on rules_listview selection event + "unprotect_hub_values()"
        - tab 5:
            - replaced categories_listbox elements with categories_listview
            - added column to show how many times the category name exists on the rules table
            - added check to enable/disable delete button on categories_listview selection event + "unprotect_hub_values()"
            - added import + export button
        - tab 6:
            - added "set_logfilesize()" to every Logfile Load Button Event
        - global:
            - changed code style to fit code standard
            - changed "need_save" to object and track changes for Tab 1 + Tab 2 + Tab 3
            - renamed button "save_hub_cfg" to "save_hub"
            - renamed button "save_button" to "save_rules"
            - extended "table" object which contain all table methods
            - added "validate" object which contain all validator methods
            - added "dialog" object which contain all validator methods
            - added "wxEVT_COMMAND_TEXT_UPDATED" Events for Tab 1 + Tab 2 + Tab 
            - added param page to "disable_save_buttons()" + "save_changes()" + "undo_changes()"
            - replaced all "wx.wxMessageDialog()" whith "dialog.msg()" / "dialog.info()" / "dialog.question()"
            - replaced all custom checks and validations with "validate.cert()" / "validate.hub()" / "validate.cfg()" / "validate.rules()" / "validate.empty_name()" / "validate.empty_cat()" / "validate.unique_name()"
            - replaced all custom table methods with "table.hasValue()" / "table.hasKey()" / "table.getKey()" / "table.copy()"